--- a/pages/index.html
+++ b/pages/index.html
@@ -7,6 +7,7 @@
     <title>CarCheck</title>
 </head>
 <body>
+    <h1>teste</h1>
     <header>
         <div class="container-header">
             
