--- a/pages/cadastrar-cliente.html
+++ b/pages/cadastrar-cliente.html
@@ -43,43 +43,51 @@
         <div class="container-cadastro">
         
             <div class="input-container">
-                <label for="name" class="name">Nome Completo:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
+                <label for="nome">Nome Completo:</label>
+                <input id="nome" name="nome" placeholder="Digite seu Nome" type="text" class="input">
+                <div class="underline"></div>
+            </div>
+             <div class="input-container">
+                <div class="ls-custom-select">
+                    <label for="genero">Gênero:</label>
+                    <select id="genero" class="escolha-genero" aria-label="selecione">
+                        <option selected="">Selecione..</option>
+                        <img src="../image/seta.png" alt="Logo CarCheck" title="CarCheck">
+                        <option value="1">Masculino</option>
+                        <option value="2">Feminino</option>
+                        <option value="3">Outro</option>
+                    </select>
+                </div>
+                <div class="underline"></div>
+            </div>
+             <div class="input-container">
+                <label for="telefone">Telefone:</label>
+                <input id="telefone" name="telefone" placeholder="Digite seu Telefone" type="number" class="input">
+                <div class="underline"></div>
+            </div>
+             <div class="input-container">
+                <label for="e-mail">E-mail:</label>
+                <input id="e-mail" name="e-mail" placeholder="Digite seu E-mail" type="email" class="input">
+                <div class="underline"></div>
+            </div>
+             <div class="input-container">
+                <label for="datadenascimento">Data de Nascimento:</label>
+                <input id="datadenascimento" name="datadenascimento" placeholder="Digite sua Data de Nascimento" type="date" class="input">
+                <div class="underline"></div>
+            </div>
+             <div class="input-container">
+                <label for="senha">Senha:</label>
+                <input id="senha" name="senha" placeholder="Insira uma Senha" type="password" class="input">
+                <div class="underline"></div>
+            </div>
+             <div class="input-container">
+                <label for="cpf">CPF:</label>
+                <input id="cpf" name="cpf" placeholder="Digite seu CPF" type="number" class="input">
                 <div class="underline"></div>
             </div>
             <div class="input-container">
-                <label for="name" class="name">Gênero:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label for="name" class="name">Nome:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label for="name" class="name">Nome:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label for="name" class="name">Nome:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label for="name" class="name">Nome:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label for="name" class="name">Nome:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
-                <div class="underline"></div>
-            </div>
-            <div class="input-container">
-                <label for="name" class="name">Nome:</label>
-                <input placeholder="Digite seu nome" type="text" class="input">
+                <label for="confirmarsenha">Confirmar Senha:</label>
+                <input id="confirmarsenha" name="confirmarsenha"placeholder="Confirme sua senha" type="password" class="input">
                 <div class="underline"></div>
             </div>
         </div>
