--- a/pages/cadastrar-cliente.html
+++ b/pages/cadastrar-cliente.html
@@ -16,8 +16,8 @@
         <!-- Sidebar -->
         <div class="sidebar">
             <a href="#home">Home</a>
-            <a href="#services">Services</a>
-            <a href="#clients">Clients</a>
+            <a href="#services">Serviços</a>
+            <a href="#clients">Clientes</a>
             <a href="login.html">Sair</a>
         </div>
 
